objects/gvp__Auto_Update__c.object
<CustomObject>
    <fields>
        <fullName>gvp__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Additional_Update_Field_Name__c</fullName>
        <description>Additional Field API Name to be updated when record is &quot;expired&quot;.</description>
        <label>Additional Update Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Additional_Update_Field_Value__c</fullName>
        <description>Update the &quot;additional&quot; field with this value when record is &quot;expired&quot;.</description>
        <label>Additional Update Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Duration_Field_Name__c</fullName>
        <description>Field API Name used with &quot;Duration Interval&quot; and &quot;Duration Type&quot; to determine if record is &quot;Expired&quot;.</description>
        <label>Duration Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Duration_Interval__c</fullName>
        <description>Integer value used along with &quot;Duration Type&quot; to determine if record is &quot;Expired&quot;.</description>
        <label>Duration Interval</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Duration_Type__c</fullName>
        <description>Used with &quot;Duration Interval&quot; to determine if record has &quot;Expired&quot;.</description>
        <label>Duration Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Minute</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                    <default>true</default>
                    <label>Day</label>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__How_Many_Days_Back__c</fullName>
        <defaultValue>90</defaultValue>
        <description>Number of days in the past to process. This is used against the object&apos;s CreatedDate</description>
        <label>How Many Days Back?</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Object_Name__c</fullName>
        <description>API Name of the object which will be checked</description>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Primary_Field_Expired_Value__c</fullName>
        <description>Used to filter records when determining if the record has &quot;expired&quot;.</description>
        <label>Primary Field Expired Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Primary_Field_Name__c</fullName>
        <description>API name of field to inspect when determining if record is &quot;Expired&quot;.</description>
        <label>Primary Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Primary_Field_Update_Value__c</fullName>
        <description>Once a record is determined to be &quot;expired&quot;, the &quot;Primary Field&quot; will be updated with the value in this field</description>
        <label>Primary Field Update Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Query_Limit__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Number of records to query in the batch jobs. Users can lower this number to get around governor limits if the target object has triggers which can increase the amount of DML statements being processed per batch.</description>
        <label>Query Limit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Auto Update</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AUJ-{0000}</displayFormat>
        <label>Auto Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>